--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,10 @@
 </head>
 <body>
   {{> _navbar}}
+
+  {{#if user}}
+    {{> _add-btn}}
+  {{/if}}
   <div class="container">
     {{{body}}}
   </div>
