--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,6 +26,12 @@
     const userDropInstance = M.Dropdown.init(userDrop, {
       coverTrigger: false
     });
+
+    const datePicker = document.querySelector('.datepicker');
+    const datePickerInstance = M.Datepicker.init(datePicker, {});
+
+    const timePicker = document.querySelector('.timepicker');
+    const timePickerInstance = M.Timepicker.init(timePicker, {});
   </script>
 </body>
 </html>
