--- a/views/todos/add.handlebars
+++ b/views/todos/add.handlebars
@@ -1,1 +1,38 @@
 <h1>Add New Tadoo</h1>
+<div class="row">
+  <div class="col s12 m8 offset-m2">
+    <div class="card green lighten-5">
+      <div class="card-content">
+        <div class="container">
+          <form action="/todos" method="POST">
+            <div class="row">
+              <div class="input-field col s12">
+                <input type="text" name="title" required>
+                <label for="name">Title</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input type="text" name="description">
+                <label for="description">Description</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input type="text" name="date" class="datepicker">
+                <label for="date">Date</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input type="text" name="time" class="timepicker">
+                <label for="time">Time</label>
+              </div>
+            </div>
+            <button class="btn green darken-3" type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
