--- a/views/todos/index.handlebars
+++ b/views/todos/index.handlebars
@@ -1,1 +1,18 @@
 <h1>Here is what you have Tadoo:</h1>
+<div class="row">
+  {{#each todos}}
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="" class="btn-floating halfway-fab yellow"><i class="material-icons">edit</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">{{title}}</span>
+          <p>{{description}}</p>
+        </div>
+      </div>
+    </div>
+  {{else}}
+    <p>You have nothing Tadoo!  Make a new Tadoo by clicking the add button in the bottom right.</p>
+  {{/each}}
+</div>
