Todo zoom CSS helpers

--- a/views/partials/_add-btn.handlebars
+++ b/views/partials/_add-btn.handlebars
@@ -1,5 +1,5 @@
 <div class="fixed-action-btn">
-  <a href="/todos/add" class="btn-floating btn-large red">
+  <a href="/todos/add" class="btn-floating btn-large red pulse">
     <i class="material-icons">add</i>
   </a>
 </div>
