--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Tadoo</title>
 </head>
 <body>
@@ -21,17 +22,6 @@
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-  <script>
-    const userDrop = document.querySelector('.dropdown-trigger');
-    const userDropInstance = M.Dropdown.init(userDrop, {
-      coverTrigger: false
-    });
-
-    const datePicker = document.querySelector('.datepicker');
-    const datePickerInstance = M.Datepicker.init(datePicker, {});
-
-    const timePicker = document.querySelector('.timepicker');
-    const timePickerInstance = M.Timepicker.init(timePicker, {});
-  </script>
+  <script src="../../js/scripts.js"></script>
 </body>
 </html>
