--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -2,7 +2,7 @@
   <div class="col s12 m6 offset-m3">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
-        <span class="card-title">What do have Tadoo?</span>
+        <span class="card-title">What do you have Tadoo?</span>
         <p>Get started by logging in or registering an account.</p>
       </div>
       <div class="card-action">
