--- a/views/todos/add.handlebars
+++ b/views/todos/add.handlebars
@@ -17,16 +17,22 @@
                 <label for="description">Description</label>
               </div>
             </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <input type="text" name="date" class="datepicker">
+            <div class="row valign-wrapper">
+              <div class="input-field col s11">
+                <input readonly type="text" name="date" class="datepicker">
                 <label for="date">Date</label>
               </div>
+              <div class="col s1">
+                <a class="btn-floating btn-small waves-effect green lighten-4"><i class="material-icons black-text" onclick="clearInput('datepicker')">delete</i></a>
+              </div>
             </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <input type="text" name="time" class="timepicker">
+            <div class="row valign-wrapper">
+              <div class="input-field col s11">
+                <input readonly type="text" name="time" class="timepicker">
                 <label for="time">Time</label>
+              </div>
+              <div class="col s1">
+                <a class="btn-floating btn-small waves-effect green lighten-4"><i class="material-icons black-text" onclick="clearInput('timepicker')">delete</i></a>
               </div>
             </div>
             <button class="btn green darken-3" type="submit">Submit</button>
