--- a/views/todos/edit.handlebars
+++ b/views/todos/edit.handlebars
@@ -19,15 +19,21 @@
               </div>
             </div>
             <div class="row">
-              <div class="input-field col s12">
+              <div class="input-field col s11">
                 <input type="text" name="date" class="datepicker" {{#if todo.dueDate}}value="{{formatDate todo.dueDate}}"{{/if}}>
                 <label for="date">Date</label>
               </div>
+              <div class="col s1">
+                <a class="btn-floating btn-small waves-effect green lighten-4"><i class="material-icons black-text" onclick="clearInput('datepicker')">delete</i></a>
+              </div>
             </div>
             <div class="row">
-              <div class="input-field col s12">
-                <input type="text" name="time" class="timepicker" {{#if todo.dueTime}}value="{{todo.dueTime}}"{{/if}}>
+              <div class="input-field col s11">
+                <input type="text" name="time" class="timepicker" {{#if todo.dueTime}}value="{{formatTime todo.dueTime}}"{{/if}}>
                 <label for="time">Time</label>
+              </div>
+              <div class="col s1">
+                <a class="btn-floating btn-small waves-effect green lighten-4"><i class="material-icons black-text" onclick="clearInput('timepicker')">delete</i></a>
               </div>
             </div>
             <button class="btn green darken-3" type="submit">Save</button>
