--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -1,11 +1,11 @@
 {{#if success_msg}}
-  <div class="card green">
-    {{success_msg}}
+  <div class="flashMsg green z-depth-3">
+    <h5>{{success_msg}}</h5>
   </div>
 {{/if}}
 
 {{#if error_msg}}
-  <div class="card red">
-    {{error_msg}}
+  <div class="flashMsg red z-depth-3">
+    <h5>{{error_msg}}</h5>
   </div>
 {{/if}}
