--- a/views/todos/add.handlebars
+++ b/views/todos/add.handlebars
@@ -1,4 +1,6 @@
 <h1>Add New Tadoo</h1>
+<a href="/" class="btn"><i class="material-icons">arrow_back</i>Back</a>
+
 <div class="row">
   <div class="col s12 m8 offset-m2">
     <div class="card green lighten-5">
@@ -19,6 +21,7 @@
             </div>
             <div class="row valign-wrapper">
               <div class="input-field col s11">
+                <i class="far fa-calendar-alt prefix"></i>
                 <input readonly type="text" name="date" class="datepicker">
                 <label for="date">Date</label>
               </div>
@@ -28,6 +31,7 @@
             </div>
             <div class="row valign-wrapper">
               <div class="input-field col s11">
+                <i class="far fa-clock prefix"></i>
                 <input readonly type="text" name="time" class="timepicker">
                 <label for="time">Time</label>
               </div>
