--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row welcome">
   <div class="col s12 m6 offset-m3">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
