--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,20 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
   <title>Tadoo</title>
 </head>
 <body>
   {{> _navbar}}
 
-  {{#if user}}
-    {{> _add-btn}}
-  {{/if}}
-  <div class="container">
-    {{> _msg}}
-    {{> _errors}}
-    {{{body}}}
-  </div>
+  <main>
+    {{#if user}}
+      {{> _add-btn}}
+    {{/if}}
+    <div class="container">
+      {{> _msg}}
+      {{> _errors}}
+      {{{body}}}
+    </div>
+  </main>
+
+
+  {{> _footer}}
 
 
 
