--- a/views/todos/edit.handlebars
+++ b/views/todos/edit.handlebars
@@ -1,4 +1,6 @@
 <h1>Edit Tadoo</h1>
+<a href="/" class="btn"><i class="material-icons">arrow_back</i>Back</a>
+
 <div class="row">
   <div class="col s12 m8 offset-m2">
     <div class="card green lighten-5">
@@ -20,6 +22,7 @@
             </div>
             <div class="row">
               <div class="input-field col s11">
+                <i class="far fa-calendar-alt prefix"></i>
                 <input type="text" name="date" class="datepicker" {{#if todo.dueDate}}value="{{formatDate todo.dueDate}}"{{/if}}>
                 <label for="date">Date</label>
               </div>
@@ -29,6 +32,7 @@
             </div>
             <div class="row">
               <div class="input-field col s11">
+                <i class="far fa-clock prefix"></i>
                 <input type="text" name="time" class="timepicker" {{#if todo.dueTime}}value="{{formatTime todo.dueTime}}"{{/if}}>
                 <label for="time">Time</label>
               </div>
