--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row login">
   <div class="col s12 m8 offset-m2">
     <div class="card green lighten-5">
       <div class="card-content">
@@ -7,13 +7,13 @@
           <form action="/users/login" method="POST">
             <div class="row">
               <div class="input-field col s12">
-                <input type="email" name="email" required>
+                <input type="email" name="email" placeholder=" " required>
                 <label for="email">Email</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input type="password" name="password" required>
+                <input type="password" name="password" placeholder=" " required>
                 <label for="password">Password</label>
               </div>
             </div>
