--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row register">
   <div class="col s12 m8 offset-m2">
     <div class="card green lighten-5">
       <div class="card-content">
